new pages, design tweaks

--- a/dev/partials/_buttons.html
+++ b/dev/partials/_buttons.html
@@ -1,4 +1,4 @@
-<button class="button">Button Text Here</button>
+<a href="https://www.admissions.purdue.edu/majors/index.php" class="button">Button Text Here</a>
 
 <button class="button button-campusGold-inverse">Button Text Here</button>
 
