--- a/dev/partials/_careers-jumbotron.html
+++ b/dev/partials/_careers-jumbotron.html
@@ -4,8 +4,8 @@
 			<h2>Graduate Success</h2>
 			<p>Most years, more than 90% of new Purdue graduates report success in finding jobs, continuing their education, or pursuing other plans (such as the Peace Corps or Teach for America) within six months of graduation. Information about grad success rates and average salaries is available on the Purdue Center for Career Opportunities (CCO) website.</p>
 
-			<button class="button button-light button-black button-bar">Purdue Center for Career Opportunities</button>
-			<button class="button button-light button-black button-bar">Career Services Data Dashboard</button>
+			<a href="https://www.admissions.purdue.edu/majors/index.php" class="button button-light button-black button-bar">Purdue Center for Career Opportunities</a>
+			<a href="https://www.admissions.purdue.edu/majors/index.php" class="button button-light button-black button-bar">Career Services Data Dashboard</a>
 
 			<hr>
 
