--- a/dev/partials/_footer-sidebar.html
+++ b/dev/partials/_footer-sidebar.html
@@ -1,6 +1,6 @@
 <section id="footer-sidebar">
     <div class="container">
-	<a id="side-menu-btn"><i class="fa fa-bars"></i></a>
+	<a id="side-menu-btn"><i class="fas fa-bars"></i><a class="sr-only">menu</a></a>
 
 	<ul id="sidenav" class="nav nav-pills flex-column">
 	  <li class="top-level"><a href="#">Section Home</a></li>
