--- a/dev/partials/_social-sidebar.html
+++ b/dev/partials/_social-sidebar.html
@@ -1,13 +1,25 @@
- <section id="social-sidebar">
+ <section class="hide-no-js" id="social-sidebar">
     <div class="container">
-	<a id="side-social-btn"><i class="fa fa-share-alt"></i></a>
+	<a id="side-social-btn"><i class="fa fa-share-alt"></i><span class="sr-only">Share this page:</span></a>
 
 	<ul id="social-links" class="nav nav-pills flex-column">
-		<li><a class="slayterblue-text" href="#"><i class="fab fa-facebook-square"></i></a></li>
-		<li><a class="ameliablue-text" href="#"><i class="fab fa-twitter"></i></a></li>
-		<li><a class="orange-text" href="#"><i class="fab fa-instagram"></i></a></li>
-		<li><a class="yellow-text" href="#"><i class="fab fa-snapchat-ghost"></i></a></li>
-		<li><a class="purple-text" href="#"><i class="fab fa-pinterest"></i></a></li>
+		
+		<li><a class="fb-share" href="#"><i class="fab fa-facebook-square"></i><span class="sr-only">Facebook</span></a></li>
+		
+		<li><a data-hashes="" class="twitter-share" href="https://twitter.com/share?url=https://www.admissions.purdue.edu/"><i class="fab fa-twitter"></i><span class="sr-only">Tweet</span></a>
+		</li>
+		
+		<li><a id="reddit-share" class="" href="#"><i class="fab fa-reddit-alien"></i><span class="sr-only">Reddit</span></a></li>
+		
+		<li><a id="tumblr-share" class="" href="#"><i class="fab fa-tumblr-square"></i><span class="sr-only">Tumblr</span></a></li>
+		
+		<li><a id="blogger-share" class="" href="#"><i class="fab fa-blogger-b"></i><span class="sr-only">Blogger</span></a></li>
+		
+		<li class="show-sm"><a id="sms-share" href="#"><i class="fas fa-sms"></i><span class="sr-only">Text</span></a></li>
+		
+		<li><a id="email-share" href="#"><i class="fas fa-envelope"></i><span class="sr-only">Email</span></a></li>
+		
+		
 	</ul>
 	</div>
 </section>
