--- a/dev/scss/_mixins.scss
+++ b/dev/scss/_mixins.scss
@@ -5,7 +5,7 @@
 	animation: $what;
 }
 @mixin black-lines-on-gray(){
-	background: #222 url(../images/linesBG.png) no-repeat center;
+	background: #222 url(https://admissions.purdue.edu/images/design-elements/linesBG.png) no-repeat center;
     background-size: cover;
 }
 @mixin border-radius($amount){
