--- a/dev/scss/_nojs.scss
+++ b/dev/scss/_nojs.scss
@@ -60,6 +60,9 @@
 	#social {
 		display: none!important;
 	}
+	#social-sidebar {
+	
+	}
 	.virtualtour_embed {
 		display: block;
 		background-color: #555;
