--- a/dev/scss/main.scss
+++ b/dev/scss/main.scss
@@ -14,7 +14,10 @@
 
 @import 'home';
 @import 'landing';
+@import 'event-landing';
 @import 'majors-schools';
 @import 'nojs';
+@import 'social-media-share';
 
-@import 'wearepurdue';
+@import 'temp';
+/*@import 'wearepurdue';*/
