--- a/dev/partials/_head.html
+++ b/dev/partials/_head.html
@@ -9,11 +9,17 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, user-scalable=no" name="viewport" />
     <link href="https://www.purdue.edu/purdue/images/favicon.ico" rel="shortcut icon" />
+	
+	<!-- partial:_twitter-card.html -->
+	<!-- partial -->
+	<!-- partial:_meta-og.html -->
+	<!-- partial -->
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 	
     <link rel="stylesheet" text="text/css" href="css/main.css" />
+	<link rel="stylesheet" text="text/css" href="css/print.css" media="print" />
     
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow:400,700" rel="stylesheet">
 	<!--[if IE]>
