--- a/dev/partials/_header-nonav.html
+++ b/dev/partials/_header-nonav.html
@@ -2,14 +2,15 @@
 		<div class="top">
 			<div class="container">
 				<div class="row">
-					<div class="logo col-lg-2 col-md-3 col-sm-12">
+					<div class="logo col-lg-2 col-md-3 col-sm-12 screen-only">
 						<a href="https://www.purdue.edu">
 							<img alt="Purdue University" src="https://www.purdue.edu/purdue/images/logo.png"/>
 						</a>
 					</div>
-					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12">
+					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12 screen-only">
 						<a href="/index.php">Undergraduate Admissions</a><!--<span class="tagline"><a href="#">Website tagline</a></span>-->
 					</div>
+					<div class="col-lg-12 print-only"><img style="margin-top:30px" alt="print-logo" src="images/print-logo.png"/></div>
 				</div>
 			</div>
 		</div>
