--- a/dev/partials/_header.html
+++ b/dev/partials/_header.html
@@ -31,7 +31,7 @@
 				
 				<ul class="nav navbar-nav mr-auto information">
 					<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Find Info For <b class="caret"></b></a>
-						<ul class="dropdown-menu"><p class="hide">Find Info For</p>
+						<ul class="dropdown-menu">
 							<li><a href="/index.php">Prospective Students</a></li>
 							<li><a href="/admitted/index.php">Admitted Students</a></li>
 							<li><a href="http://www.purdue.edu/purdue/current_students/index.php" target="_blank">Current Students</a></li>
@@ -65,14 +65,16 @@
 		<div class="top">
 			<div class="container">
 				<div class="row">
-					<div class="logo col-lg-2 col-md-3 col-sm-12">
+					
+					<div class="logo col-lg-2 col-md-3 col-sm-12 screen-only">
 						<a href="https://www.purdue.edu">
 							<img alt="Purdue University" src="https://www.purdue.edu/purdue/images/logo.png"/>
 						</a>
 					</div>
-					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12">
+					<div class="department col-lg-9 col-md-9 col-sm-9 col-xs-12 screen-only">
 						<a href="/index.php">Undergraduate Admissions</a><!--<span class="tagline"><a href="#">Website tagline</a></span>-->
 					</div>
+					<div class="col-lg-12 print-only"><img style="margin-top:30px" alt="print-logo" src="images/print-logo.png"/></div>
 				</div>
 			</div>
 		</div>
