--- a/dev/scss/_purdue-header-footer.scss
+++ b/dev/scss/_purdue-header-footer.scss
@@ -549,7 +549,7 @@
 		border: none;
 		padding-bottom: 5px;
 		font-size: 100%;
-		@include box-shadow(1px 4px 3px, #000, 0.3);
+		/*@include box-shadow(1px 4px 3px, #000, 0.3);*/
 		position: absolute;
 		left: inherit;
 		top: inherit;
@@ -616,9 +616,10 @@
 	}
 }
 #site-nav {
+	
 	&.navbar-inverse {
 		background-color: #000;
-
+		padding-top: 0;
 
 		.dropdown-menu {
 			background-color: #000;
@@ -628,7 +629,7 @@
 			white-space: nowrap;
 			border-radius: 0;
 			border: none;
-			@include box-shadow(1px 4px 3px, #000, 0.3);
+			/*@include box-shadow(1px 4px 3px, #000, 0.3);*/
 
 			li {
 				margin-bottom: 5px;
@@ -643,7 +644,7 @@
 			a {
 				display: inline-block;
 				color: #9D9D9D;
-				padding: 15px 30px 5px 0;
+				padding: 0 30px 5px 0;
 				text-decoration: none;
 
 				&:hover {
