--- a/dev/scss/_utility.scss
+++ b/dev/scss/_utility.scss
@@ -31,7 +31,7 @@ hr {
 		padding: 0;
 		border: none;
 		height: 20px;
-		background: transparent url(../images/hr-gold.png) no-repeat center;
+		background: transparent url(https://admissions.purdue.edu/images/design-elements/hr-gold.png) no-repeat center;
 	}
 	
 	&.extra-large {
@@ -51,9 +51,13 @@ hr {
 .note {
 	font-size:.8em;
 }
+.print-only {
+	display: none;
+}
 .right {
 	float: right;
 }
+
 
 /* media queries */
 @include tablet {
